2008-11-15  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extArray.ml: module [Labels] added

	* src/core/extlib/extArray.ml*: [filter_map] added

	* src/core/extlib/extArray.ml*: module [ExceptionLess] added

	* src/core/extlib/extArray.ml*: [iter2i] added

	* src/core/extlib/enum.ml: module [Labels] added

	* src/core/extlib/enumLabels.ml*: removed

	* src/syntax/pa_openin/pa_openin_r.ml: [multi_module_expr] now uses keyword [include], [module_binding0] exported

	* src/syntax/pa_openin/pa_openin.ml: [multi_module_expr] now uses keyword [include]

	* doc/batteries/html/extensions.html: Documentation on multi-aliasing

	* src/core/extlib/enum.mli: Documentation on override modules

	* src/main/nothreads/batteries.ml: [Common] added

	* src/main/threads/batteries.ml: [RMutex], [Common] added

	* src/core/extlib_threads/extPervasivesThreads.ml: removed content

	* src/core/extlib/extPervasives.ml*: [lock] added

	* src/core/extlib/concurrent.ml*: [create] added

	* src/core/extlib_threads/extUnixThreads.ml: [lock] is now a [Concurrent.lock]

	* src/main/nothreads/batteries.mllib: [InnerIO] removed

	* src/main/threads/batteries.mllib: [InnerIO] removed

	* src/core/extlib.mlpack: [InnerIO] added

	* src/core/extlib/concurrent.mli: [type lock] becomes abstract

2008-11-14  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/innerIO.ml: [flush], [flush_all] now use [Concurrent.sync]

	* src/core/extlib/concurrent.ml*: [try_lock] added

	* src/core/extlib_threads/IOThreads.ml: now defines [lock] and [lock_factory]

	* src/core/extlib_threads/IOThreads.mli: removed

	* src/core/extlib_threads/extMutex.ml*: [make] added

	* src/core/batteries_core_threads.ml: [Concurrency.Common] added

	* src/core/batteries_core.ml: [Concurrency.Common] added

	* src/core/extlib/IO.ml: [synchronize_in], [synchronize_out], [lock_factory] added

	* src/core/extlib/innerIO.ml: [wrap_in] now uses [Concurrent]
