@@ -1,5 +1,9 @@
 2008-11-15  David Teller  <David.Teller@univ-orleans.fr>
 
+	* src/core/extlib.mlpack: [EnumLabels] removed
+
+	* src/core/batteries_core.ml: [ArrayLabels] removed
+
 	* src/core/extlib/extArray.ml: module [Labels] added
 
 	* src/core/extlib/extArray.ml*: [filter_map] added
